added send email feature

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 						</div>
 					</div>
 					<div class="col-md-7 wrap-about pr-md-4 ftco-animate">
-          	<h2 class="mb-4">Services</h2>
+          	<h2 class="mb-4"> Our Services</h2>
 			<p> We work with clients, providing exceptional consulting services that are catered specifically to their needs. Take a look below at the services We offer and get in touch to achieve immediate results.</p>
 			  <div class="row mt-5">
 							<div class="col-lg-6">
