changed to fill form from our services on homepage - link

--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
           <div class="col-md-7 ftco-animate">
           	<span class="subheading">Welcome to Excel Abroad</span>
             <h1 class="mb-4">We Are The Best Education Consulting Agency</h1>
-            <p><a href="#ourServices" class="btn btn-primary px-4 py-3 mt-3">Our Services</a></p>
+            <p><a href="contact.html#contact-form" class="btn btn-primary px-4 py-3 mt-3">Fill The Form</a></p>
           </div>
         </div>
         </div>
@@ -104,7 +104,7 @@
           <div class="col-md-7 ftco-animate">
           	<span class="subheading">Our Guidance, Your Success</span>
             <h1 class="mb-4">We Help You Achieve Your Academic Goals</h1>
-            <p><a href="#ourServices" class="btn btn-primary px-4 py-3 mt-3">Our Services</a></p>
+            <p><a href="contact.html#contact-form" class="btn btn-primary px-4 py-3 mt-3">Fill The Form</a></p>
           </div>
         </div>
         </div>
