--- a/public/about.html
+++ b/public/about.html
@@ -70,11 +70,11 @@
         </form>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
-	        	<li class="nav-item active"><a href="index.html" class="nav-link pl-0">Home</a></li>
-	        	<li class="nav-item"><a href="programs.html" class="nav-link">Programs</a></li>
+	        	<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
+	        	<li class="nav-item active"><a href="about.html" class="nav-link">About Us</a></li>
 	        	<li class="nav-item"><a href="scholarships.html" class="nav-link">Scholarships</a></li>
-	        	<li class="nav-item"><a href="intershipps.html" class="nav-link">Internships</a></li>
-	        	<li class="nav-item"><a href="blog.html" class="nav-link">Tours & Travel</a></li>
+	        	<li class="nav-item"><a href="programs.html" class="nav-link">Programs</a></li>
+	        	<li class="nav-item"><a href="tours.html" class="nav-link">Tours & Travel</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -109,12 +109,12 @@
 					</div> -->
 					<div class="col-md-12 wrap-about pr-md-4 ftco-animate">
             <h2 class="mb-4">Welcome to Excel Abroad</h2>
-            <p>Excel Abroad is an Educational Consultancy Firm, registered under Excel Abroad LTD in 2014, a US based firm, dedicated to providing best solutions to the both African and Asian students seeking educational opportunities in International institutions.</p>
-
-            <p>We are one of the leading Educational Consultants, acknowledged for providing best guidance and counselling to the students. We offer professional advise to incoming students.</p>
+            <p>Excel Abroad is an online Educational Consultancy Firm formed by former international graduate students in the United States who saw the need to help others to achieve similar goals.</p>
+            <p> Working under the principles of transparency, competence, dedication and honesty, Excel-Abroad is dedicated to providing the best solutions to international students from Africa and Asia seeking educational opportunities in academic institutions in the United States, Canada, Europe and the UK.</p>
+            <p>We are one of the leading Educational Consultancies with a team of more than 50 associates always available to assist our clients promptly and effectively. </p>
             <p>We believe in maintaining a positive mindset, creating partnerships with a purpose, and always striving for significant outcomes. When you work with us, you should expect a collaboration with transparency and consistency. </p>
             <p>Want to know more? <a href="contact.html">Contact Us</a> today for an initial free consultation on </p>
-             <p> Email: <a href="mailto:info@excel-abroad.com"> excel-abroad@gmail.com </a></p>
+             <p> Email: <a href="mailto:info@excel-abroad.com"> info@excel-abroad.com</a></p>
 
 					</div>
 				</div>
@@ -138,10 +138,10 @@
             <h2 class="mb-4">Why Excel Abroad?</h2>
             <ul>
               <li>FREE Initial Consultation</li>
-              <li>One of the top-rated education consultancy in USA with one of the highest (100 %) student admission success rates</li>
+              <li>One of the top-rated education consultancy firms in USA with one of the highest (88%) student admission acceptance rates</li>
               <li>Rapidly growing education consultancy with over 2 years of proven experience</li>
-              <li>Experienced, professional, friendly and dedicated and, ready to advise students starting from their first day of application for admission and program selection to visa application.</li>
-              <li>Evaluation of academic strength, financial stability and plans determined to match the expectation of a college offering admission</li>
+              <li>Experienced, professional, friendly and dedicated and associates ready to offer advisce to students from the beginning for the school admission process, through-out their visa application and travel preparations.</li>
+              <li>Evaluation of academic strength, financial stability and plans determined to match the expectation of the students and their desired academic institution.</li>
               <li>Reliable agency for students who rely solely upon our expertise in counselling, guidance, and recommendations</li>
             </ul>
           </div>
@@ -206,7 +206,7 @@
     	</div>
     </section>
 		
-	<section class="ftco-section testimony-section">
+	<!-- <section class="ftco-section testimony-section">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-8 text-center heading-section ftco-animate">
@@ -291,7 +291,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
 		
      <footer class="ftco-footer ftco-bg-dark ftco-section">
@@ -302,7 +302,7 @@
             	<h2 class="ftco-heading-2">Have any Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">450 Serra Mall ,Stanford, California, USA</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Hamilton Township, NJ 08619</span></li>
 	                <li><a href="tel://17812409322"><span class="icon icon-phone"></span><span class="text">+1 781 240 9322</span></a></li>
 	                <li><a href="mailto:info@excel-abroad.com"><span class="icon icon-envelope"></span><span class="text">info@excel-abroad.com</span></a></li>
 	              </ul>
@@ -320,7 +320,7 @@
               </div>
               <div class="block-21 mb-5 d-flex">
                 <div class="text">
-                  <h3 class="heading"><a href="#"> Tours and Travel </a></h3>
+                  <h3 class="heading"><a href="tours.html"> Tours and Travel </a></h3>
                 </div>
               </div>
             </div>
@@ -329,11 +329,11 @@
             <div class="ftco-footer-widget mb-5 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Programs</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Scholarships</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Internships</a></li>
-                <li><a href="#"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
+                <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
+                <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About Us</a></li>
+                <li><a href="scholarships.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Scholarships</a></li>
+                <li><a href="programs.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Programs</a></li>
+                <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
               </ul>
             </div>
           </div>
