--- a/public/scholarships.html
+++ b/public/scholarships.html
@@ -71,10 +71,10 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
 	        	<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
-	        	<li class="nav-item"><a href="programs.html" class="nav-link">Programs</a></li>
+	        	<li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
 	        	<li class="nav-item active"><a href="scholarships.html" class="nav-link">Scholarships</a></li>
-	        	<li class="nav-item"><a href="interships.html" class="nav-link">Internships</a></li>
-	        	<li class="nav-item"><a href="blog.html" class="nav-link">Tours & Travel</a></li>
+	        	<li class="nav-item"><a href="programs.html" class="nav-link">Programs</a></li>
+	        	<li class="nav-item"><a href="tours.html" class="nav-link">Tours & Travel</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
@@ -112,13 +112,14 @@
 					</div> -->
 					<div class="wrap-about pr-md-4 ftco-animate">
           	<h2 class="mb-4">Scholarships</h2>
-            <p>We shall help you in your search for scholarships and guide you through out the application process. We always endeavor to secure our clients at least half scholarships when they receive an admissions. </p>
+            <p>We shall help you in your search for scholarships and guide you through out the application process. We always endeavor to secure our clients at least half scholarships when they receive an admission.</p>
+            <p>Excel-Abroad does not guarantee that your will be offered a scholarship but our associates who have vast experience in applying and finding scholarships will be here to guide you and assist you through out the application process. </p>
             <p>scholarships are secured for the following</p>
             <ul>
-              <li> Bachelors Degrees</li>
+             
               <li> Masters Degrees</li>
               <li> Postgraduate Degrees</li>
-              <li> PhDs</li>
+        
             </ul>
 					</div>
         </div>
@@ -138,8 +139,8 @@
             	<h2 class="ftco-heading-2">Have any Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">450 Serra Mall ,Stanford, California, USA</span></li>
-	                <li><a href="tel://18574175183"><span class="icon icon-phone"></span><span class="text">+1 857 417 5183</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Hamilton Township, NJ 08619</span></li>
+	                <li><a href="tel://18574175183"><span class="icon icon-phone"></span><span class="text">+1 781 240 9322</span></a></li>
 	                <li><a href="mailto:info@excel-abroad.com"><span class="icon icon-envelope"></span><span class="text">info@excel-abroad.com</span></a></li>
 	              </ul>
 	            </div>
@@ -156,7 +157,7 @@
               </div>
               <div class="block-21 mb-5 d-flex">
                 <div class="text">
-                  <h3 class="heading"><a href="#"> Tours and Travel </a></h3>
+                  <h3 class="heading"><a href="tours.html"> Tours and Travel </a></h3>
                 </div>
               </div>
             </div>
@@ -166,9 +167,9 @@
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
                 <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
+                <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About Us</a></li>
+                <li><a href="scholarships.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Scholarships</a></li>
                 <li><a href="programs.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Programs</a></li>
-                <li><a href="scholarships.html"><span class="ion-ios-arrow-round-forward mr-2 active"></span>Scholarships</a></li>
-                <li><a href="interships.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Internships</a></li>
                 <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
               </ul>
             </div>
